  22 May 2014
img^jpg:(img^jpg)^?n failed, while img+jpg:(img+jpg)^?n succeeded. Now they both succeed.

  16 May 2014
1\La+1\Lb crashed due to stack overflow. Test ~1 in f5 solves the problem.

   6 May 2014
Increased a buffer size to solve segmentation fault problem with 64-bit
version when evaluating roots of some big numbers, for example
10090000004431^1/2

   3 May 2014
a^(b+c+d+e)*f^(g+h):?*?^(%+[<3)*? failed to succeed. If the first found
sublist (b+c+d+e in this example) failed to match the pattern, other sublists
where not tried.

   22 April 2014
(xml.c) The &&; sequence to escape & is no good, because &amp;&amp;; after a
full round trip ends up as & using this scheme. Decide to use the DEL character
(ASCII 127) instead and see whether that goes.. This character is forbidden or
discouraged in HTML  and XML So &blah; becomes DEL&blah; and DEL becomes 
DELDEL.

   19 April 2014
(xml.c) Unknown entity references are escaped by replacing the '&' at the start
by '&&;'. So "&surrogate-blocks;" becomes "&&;surrogate-blocks;". When writing
back to mark-up, all '&' must be converted to &amp;, except the seqences '&&;',
which must be converted to '&'.

   17 April 2014
In HTML (not XHTML), the script and style elements have cdata, not parsing the
<![CDATA[  ]]> tag that may be present for compatibility with XHTML.
The cdata of scipt and style elements ends at the first occurrence of the
character sequence </
(That means that that character sequence may not occur in for example inline
JavaScript in an HTML file that is not XML at the same time.)

get, put and lst can take argument TXT and BIN. BIN means that a 'b' is added
to the file mode. In *n*x systems this has no effect. In Windows, text mode
is default, while a 'b' is needed to suppress carriage returns.
get and lst read resp. write per default in binary mode. put writes per default
in text mode.

When lst is used to output to stdout, a newline is inserted before the last ).
   8 February 2014